--- a/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
+++ b/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
@@ -43,23 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Builders\AudioBuilder.cs" />
     <Compile Include="Classes\AudioItem.cs" />
-    <Compile Include="Classes\GeneralMedia.cs" />
-    <Compile Include="Classes\GeneralMediaItem.cs" />
+    <Compile Include="Classes\Media.cs" />
+    <Compile Include="Classes\MediaItem.cs" />
     <Compile Include="Classes\MediaComponents.cs" />
-    <Compile Include="Components\MediaUrl.cs" />
     <Compile Include="Interfaces\IMedia.cs" />
     <Compile Include="Interfaces\IMediaItem.cs" />
     <Compile Include="Interfaces\IReproduceble.cs" />
-    <Compile Include="Maker.cs" />
-    <Compile Include="Components\Media.cs" />
-    <Compile Include="Builders\MediaBuilder.cs" />
-    <Compile Include="Components\MediaFile.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Builders\VideoBuilder.cs" />
-    <Compile Include="Builders\PhotoBuilder.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
