--- a/001_Mediateka new/Mediateka/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/001_Mediateka new/Mediateka/ConsoleApplication1/ConsoleApplication1.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39D6E83B-851D-49DF-8A6B-0B8DEADBEA1E}</ProjectGuid>
+    <ProjectGuid>{CD17A48A-21B4-45C1-A8D0-7C3A4E5C02B3}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mediateka</RootNamespace>
-    <AssemblyName>Mediateka</AssemblyName>
+    <RootNamespace>ConsoleApplication1</RootNamespace>
+    <AssemblyName>ConsoleApplication1</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,13 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Disk.cs" />
-    <Compile Include="Classes\Track.cs" />
-    <Compile Include="Interfaces\IDisk.cs" />
-    <Compile Include="Interfaces\IReproduceble.cs" />
-    <Compile Include="Interfaces\ITrack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="to delete\IMedia.cs" />
+    <Compile Include="to delete\IMediaItem.cs" />
+    <Compile Include="to delete\Media.cs" />
+    <Compile Include="to delete\MediaItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
