--- a/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
+++ b/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
@@ -44,11 +44,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Classes\Disk.cs" />
-    <Compile Include="Classes\Pictures.cs" />
+    <Compile Include="Classes\Picture.cs" />
     <Compile Include="Classes\Track.cs" />
+    <Compile Include="Classes\Video.cs" />
     <Compile Include="Interfaces\IDisk.cs" />
+    <Compile Include="Interfaces\IPicture.cs" />
     <Compile Include="Interfaces\IReproduceble.cs" />
     <Compile Include="Interfaces\ITrack.cs" />
+    <Compile Include="Interfaces\IVideo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
