--- a/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
+++ b/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
@@ -45,11 +45,13 @@
   <ItemGroup>
     <Compile Include="Classes\Disk.cs" />
     <Compile Include="Classes\Event.cs" />
+    <Compile Include="Classes\Media.cs" />
     <Compile Include="Classes\Picture.cs" />
     <Compile Include="Classes\Track.cs" />
     <Compile Include="Classes\Video.cs" />
     <Compile Include="Interfaces\IDisk.cs" />
     <Compile Include="Interfaces\IEvent.cs" />
+    <Compile Include="Interfaces\IMedia.cs" />
     <Compile Include="Interfaces\IPicture.cs" />
     <Compile Include="Interfaces\IReproduceble.cs" />
     <Compile Include="Interfaces\ITrack.cs" />
