--- a/001_Mediateka new/Mediateka/Demo/Demo.csproj
+++ b/001_Mediateka new/Mediateka/Demo/Demo.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{39D6E83B-851D-49DF-8A6B-0B8DEADBEA1E}</ProjectGuid>
+    <ProjectGuid>{18D221D7-DFA0-4FA5-A378-C06B6939600B}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Mediateka</RootNamespace>
-    <AssemblyName>Mediateka</AssemblyName>
+    <RootNamespace>Demo</RootNamespace>
+    <AssemblyName>Demo</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,19 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\Disk.cs" />
-    <Compile Include="Classes\Event.cs" />
-    <Compile Include="Classes\Media.cs" />
-    <Compile Include="Classes\Picture.cs" />
-    <Compile Include="Classes\Track.cs" />
-    <Compile Include="Classes\Video.cs" />
-    <Compile Include="Interfaces\IDisk.cs" />
-    <Compile Include="Interfaces\IEvent.cs" />
-    <Compile Include="Interfaces\IMedia.cs" />
-    <Compile Include="Interfaces\IPicture.cs" />
-    <Compile Include="Interfaces\IReproduceble.cs" />
-    <Compile Include="Interfaces\ITrack.cs" />
-    <Compile Include="Interfaces\IVideo.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
