--- a/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
+++ b/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Classes\Event.cs" />
     <Compile Include="Classes\Media.cs" />
     <Compile Include="Classes\Picture.cs" />
+    <Compile Include="Classes\Serial.cs" />
     <Compile Include="Classes\Track.cs" />
     <Compile Include="Classes\Video.cs" />
     <Compile Include="Interfaces\IDisk.cs" />
@@ -60,6 +61,7 @@
     <Compile Include="Interfaces\IMedia.cs" />
     <Compile Include="Interfaces\IPicture.cs" />
     <Compile Include="Interfaces\IReproduceble.cs" />
+    <Compile Include="Interfaces\ISerial.cs" />
     <Compile Include="Interfaces\ITrack.cs" />
     <Compile Include="Interfaces\IVideo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
