add print all  compilations

--- a/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
+++ b/001_Mediateka new/Mediateka/Mediateka/Mediateka.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\Compilation.cs" />
     <Compile Include="Classes\Disk.cs" />
     <Compile Include="Classes\Event.cs" />
     <Compile Include="Classes\Media.cs" />
@@ -58,6 +59,7 @@
     <Compile Include="Classes\Stream.cs" />
     <Compile Include="Classes\Track.cs" />
     <Compile Include="Classes\Video.cs" />
+    <Compile Include="Interfaces\ICompilation.cs" />
     <Compile Include="Interfaces\IDisk.cs" />
     <Compile Include="Interfaces\IEvent.cs" />
     <Compile Include="Interfaces\IMedia.cs" />
