--- a/01_NY_Present/NewYearPresent/NewYearPresent/NewYearPresent.csproj
+++ b/01_NY_Present/NewYearPresent/NewYearPresent/NewYearPresent.csproj
@@ -43,10 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Creator\CandyElementCreator.cs" />
-    <Compile Include="Creator\ChokoElementCreator.cs" />
-    <Compile Include="Creator\Creator.cs" />
-    <Compile Include="Creator\WaffleElementCreator.cs" />
+    <Compile Include="Creators\CandyElementCreator.cs" />
+    <Compile Include="Creators\ChokoElementCreator.cs" />
+    <Compile Include="Creators\Creator.cs" />
+    <Compile Include="Creators\WaffleElementCreator.cs" />
     <Compile Include="Elements\CandyElement.cs" />
     <Compile Include="Elements\ChocoElement.cs" />
     <Compile Include="Elements\GiftElement.cs" />
