--- a/02_Text_handler/TextHandler.csproj
+++ b/02_Text_handler/TextHandler.csproj
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Interfaces\IPunctuation.cs" />
+    <Compile Include="Interfaces\ISentence.cs" />
+    <Compile Include="Interfaces\ISentenceItem.cs" />
     <Compile Include="Interfaces\IWord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextUnits\Punctuation.cs" />
