--- a/Test/02_Test.csproj
+++ b/Test/02_Test.csproj
@@ -69,7 +69,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="TextFile.txt" />
+    <Content Include="SourceFile\TextFile.txt" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
