--- a/02_Text_handler/TextHandler.csproj
+++ b/02_Text_handler/TextHandler.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Interfaces\ISentence.cs" />
     <Compile Include="Interfaces\ISentenceItem.cs" />
     <Compile Include="Interfaces\IWord.cs" />
+    <Compile Include="Parsers\Parser.cs" />
+    <Compile Include="Parsers\TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextUnits\Punctuation.cs" />
     <Compile Include="TextUnits\Sentence.cs" />
