--- a/02_Text_handler/TextHandler.csproj
+++ b/02_Text_handler/TextHandler.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Interfaces\ISentenceItem.cs" />
     <Compile Include="Interfaces\IWord.cs" />
     <Compile Include="Parsers\Parser.cs" />
+    <Compile Include="Parsers\Separator.cs" />
     <Compile Include="Parsers\TextParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TextUnits\Punctuation.cs" />
