--- a/Test/02_Test.csproj
+++ b/Test/02_Test.csproj
@@ -83,6 +83,12 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\02_Text_handler\TextHandler.csproj">
+      <Project>{2ADDB90B-D15A-4550-BB07-4B8B14591EB0}</Project>
+      <Name>TextHandler</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
