--- a/03_AutomaticTelephoneExchange/Demo/Demo/Demo.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/Demo/Demo.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BillingSystem\BillingSystem.csproj">
+      <Project>{80407646-CB60-4A72-90D7-995E598DFF0D}</Project>
+      <Name>BillingSystem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
