--- a/03_AutomaticTelephoneExchange/Demo/AutoTeleExchange/AutoTeleExchange.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/AutoTeleExchange/AutoTeleExchange.csproj
@@ -55,7 +55,12 @@
     <Compile Include="Interfaces\ICallEvent.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\BillingSystem\BillingSystem.csproj">
+      <Project>{80407646-CB60-4A72-90D7-995E598DFF0D}</Project>
+      <Name>BillingSystem</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
