--- a/03_AutomaticTelephoneExchange/Demo/BillingSystem/BillingSystem.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/BillingSystem/BillingSystem.csproj
@@ -40,10 +40,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Classes\BillingSystem.cs" />
     <Compile Include="Classes\Contract.cs" />
     <Compile Include="Classes\Tariff.cs" />
     <Compile Include="Classes\User.cs" />
+    <Compile Include="Interfaces\IBillingSystem.cs" />
     <Compile Include="Interfaces\IContract.cs" />
+    <Compile Include="Interfaces\IStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enums\TypeOffTariffPlan.cs" />
   </ItemGroup>
