--- a/03_AutomaticTelephoneExchange/Demo/AutoTeleExchange/AutoTeleExchange.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/AutoTeleExchange/AutoTeleExchange.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="ReportCreator">
+      <HintPath>..\ReportCreator\bin\Debug\ReportCreator.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
