--- a/03_AutomaticTelephoneExchange/Demo/ReportCreator/ReportCreat.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/ReportCreator/ReportCreat.csproj
@@ -4,17 +4,15 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{945D8D95-DCFC-477B-81C0-B7B7B1524B1D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
+    <ProjectGuid>{28038EF6-ECAC-46B1-A5F3-7036066116D5}</ProjectGuid>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Demo</RootNamespace>
-    <AssemblyName>Demo</AssemblyName>
+    <RootNamespace>ReportCreator</RootNamespace>
+    <AssemblyName>ReportCreator</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,10 +20,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -34,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="BillingSystem">
+      <HintPath>..\AutoTeleExchange\bin\Debug\BillingSystem.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -44,25 +43,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="Classes\Report.cs" />
+    <Compile Include="Classes\ReportCreator.cs" />
+    <Compile Include="Classes\ReportEvent.cs" />
+    <Compile Include="Interfaces\IReportCreator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\AutoTeleExchange\AutoTeleExchange.csproj">
       <Project>{7B0E4780-D36C-4DB1-8FC0-4BD1FE9CA91A}</Project>
       <Name>AutoTeleExchange</Name>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-    </ProjectReference>
-    <ProjectReference Include="..\BillingSystem\BillingSystem.csproj">
-      <Project>{80407646-CB60-4A72-90D7-995E598DFF0D}</Project>
-      <Name>BillingSystem</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\ReportCreator\ReportCreat.csproj">
-      <Project>{28038EF6-ECAC-46B1-A5F3-7036066116D5}</Project>
-      <Name>ReportCreat</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
