--- a/03_AutomaticTelephoneExchange/Demo/BillingSystem/BillingSystem.csproj
+++ b/03_AutomaticTelephoneExchange/Demo/BillingSystem/BillingSystem.csproj
@@ -34,6 +34,9 @@
     <Reference Include="AutoTeleExchange">
       <HintPath>..\AutoTeleExchange\bin\Debug\AutoTeleExchange.dll</HintPath>
     </Reference>
+    <Reference Include="ReportCreator">
+      <HintPath>..\ReportCreator\bin\Debug\ReportCreator.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -54,8 +57,18 @@
     <Compile Include="Interfaces\IStorage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Enums\TypeOffTariffPlan.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
