--- a/04_Manager_base/Manager_base/TransferToDB/App.config
+++ b/04_Manager_base/Manager_base/TransferToDB/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
+
+  <appSettings>
+    <add key="CSVSourceFolder" value="C:\CSV" />
+  </appSettings>
+
+
 </configuration>
