--- a/04_Manager_base/Manager_base/TransferToDB/TransferToDB.csproj
+++ b/04_Manager_base/Manager_base/TransferToDB/TransferToDB.csproj
@@ -37,6 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BL\BL.csproj">
+      <Project>{C44FCD81-7F48-4430-8CA0-9AA1E492C2FD}</Project>
+      <Name>BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\CommaSeparatedValuesService\CommaSeparatedValuesService.csproj">
+      <Project>{43FAC334-5630-44AC-9E38-E3FB395D2367}</Project>
+      <Name>CommaSeparatedValuesService</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
