--- a/Manager_base/DAL/DAL.csproj
+++ b/Manager_base/DAL/DAL.csproj
@@ -45,6 +45,10 @@
     <Compile Include="Data\Product_DAL.cs" />
     <Compile Include="Data\SaleInfo_DAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\ClientRepository.cs" />
+    <Compile Include="Repository\ManagerRepository.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
+    <Compile Include="Repository\SaleInfoRepository.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
