--- a/Manager_base/BL/BL.csproj
+++ b/Manager_base/BL/BL.csproj
@@ -49,7 +49,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepoTransfer.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{5E81451E-3437-4726-978B-1F3BB2231768}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
