--- a/Manager_base/CommaSeparatedValuesService/CommaSeparatedValuesService.csproj
+++ b/Manager_base/CommaSeparatedValuesService/CommaSeparatedValuesService.csproj
@@ -48,13 +48,19 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoTeleExchange">
-      <HintPath>..\..\..\03_AutomaticTelephoneExchange\Demo\AutoTeleExchange\bin\Debug\AutoTeleExchange.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="ReportCreator">
       <HintPath>..\..\..\03_AutomaticTelephoneExchange\Demo\ReportCreator\bin\Debug\ReportCreator.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
@@ -90,6 +96,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
@@ -122,6 +129,14 @@
     <ProjectReference Include="..\BL\BL.csproj">
       <Project>{C44FCD81-7F48-4430-8CA0-9AA1E492C2FD}</Project>
       <Name>BL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DAL\DAL.csproj">
+      <Project>{5e81451e-3437-4726-978b-1f3bb2231768}</Project>
+      <Name>DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DataBaseModel\DataBaseModel.csproj">
+      <Project>{ad1ef8dd-46ce-4d69-8cee-20e573ae190c}</Project>
+      <Name>DataBaseModel</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
