--- a/Manager_base/TransferToDB/App.config
+++ b/Manager_base/TransferToDB/App.config
@@ -9,5 +9,8 @@
     <add key="CSVSourceFolder" value="C:\CSV" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 
 </configuration>
