--- a/Manager_base/DataBaseModel/App.Config
+++ b/Manager_base/DataBaseModel/App.Config
@@ -6,7 +6,7 @@
   </configSections>
   
   <connectionStrings>
-    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.EntityClient" />
+    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
 <!-- metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string="data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework"
