--- a/Manager_Base/CSVServiceNew/App.config
+++ b/Manager_Base/CSVServiceNew/App.config
@@ -12,6 +12,10 @@
     <add key="CSVSourceFolder" value="C:\CSV" />
   </appSettings>
 
+  <connectionStrings>
+    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
