add manager model and view

--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/SaleStatistics.csproj
@@ -206,6 +206,7 @@
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Manager.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\SaleInfo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -270,6 +271,7 @@
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Home\Sales.cshtml" />
+    <Content Include="Views\Home\Managers.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
