--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
@@ -3,6 +3,7 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="bootstrap" version="3.0.0" targetFramework="net452" />
   <package id="DotNetOpenAuth.AspNet" version="4.3.4.13329" targetFramework="net452" />
+  <package id="DotNetOpenAuth.Clients" version="1.0.2" targetFramework="net452" />
   <package id="DotNetOpenAuth.Core" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OAuth.Consumer" version="4.3.4.13329" targetFramework="net452" />
   <package id="DotNetOpenAuth.OAuth.Core" version="4.3.4.13329" targetFramework="net452" />
