--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/Web.config
@@ -23,20 +23,16 @@
   </appSettings>
 
 
-
-
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
 
-    <!--https://metanit.com/sharp/mvc/11.3.php   READ
+    <!--https://metanit.com/sharp/mvc/11.3.php
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
-    </authentication>
-    
--->
-  </system.web>
+    </authentication>-->
 
+  </system.web>
 
 
   <runtime>
@@ -99,23 +95,13 @@
 
 
 
-
-
   <connectionStrings>
 
-    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;          provider=System.Data.SqlClient;          provider connection string=&quot;          data source=USER-\MYSQL;          initial catalog=ManagerBase;          integrated security=True;          MultipleActiveResultSets=True;          App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="DataBaseModelContainer" connectionString="metadata=res://*/DataBaseModel.csdl|res://*/DataBaseModel.ssdl|res://*/DataBaseModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=USER-\MYSQL;initial catalog=ManagerBase;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;          AttachDbFilename=|DataDirectory|\aspnet-SaleStatistics-20170615102409.mdf;          Initial Catalog=aspnet-SaleStatistics-20170615102409;          Integrated Security=true" providerName="System.Data.SqlClient" />
-         <!-- Integrated Security=SSPI"-->
-         
-    
-  </connectionStrings>
-  
-  <!-- <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SaleStatistics-20170615102409.mdf;Initial Catalog=aspnet-SaleStatistics-20170615102409;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>  -->
 
-
+  </connectionStrings>
 
 
 
