--- a/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
+++ b/05_SaleStatistic/SaleStatistics/SaleStatistics/packages.config
@@ -12,6 +12,7 @@
   <package id="jQuery" version="2.2.3" targetFramework="net452" />
   <package id="jQuery.UI.Combined" version="1.8.24" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.15.1" targetFramework="net452" />
+  <package id="Json.NET.Web" version="1.0.49" targetFramework="net452" />
   <package id="knockoutjs" version="3.4.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
